Update lists at 20241007-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -405,6 +405,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:11c0:1b:aa2::5;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
