Update lists at 20241007-2100

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -210,6 +210,7 @@ deny 172.81.132.94;
 deny 173.0.3.111;
 deny 173.249.57.253;
 deny 173.255.198.243;
+deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.126.253.190;
@@ -1066,6 +1067,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1096,6 +1098,7 @@ deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
@@ -1495,6 +1498,7 @@ deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1755,8 +1759,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.248;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1862,7 +1864,6 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1913,7 +1914,6 @@ deny 64.227.115.78;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 67.219.109.141;
-deny 71.12.203.54;
 deny 71.19.144.106;
 deny 71.19.144.222;
 deny 72.14.179.10;
