--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -210,6 +210,7 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -1066,6 +1067,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1096,6 +1098,7 @@ allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1495,6 +1498,7 @@ allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1755,8 +1759,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1862,7 +1864,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1913,7 +1914,6 @@ allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
-allow 71.12.203.54;
 allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
