--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -47,6 +47,7 @@ set_real_ip_from 107.189.1.167;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.1.198;
 set_real_ip_from 107.189.12.3;
+set_real_ip_from 107.189.12.48;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
@@ -62,6 +63,7 @@ set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.2.179;
 set_real_ip_from 107.189.2.206;
+set_real_ip_from 107.189.28.124;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
@@ -76,6 +78,7 @@ set_real_ip_from 107.189.3.249;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.158;
 set_real_ip_from 107.189.4.209;
+set_real_ip_from 107.189.5.114;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.18;
 set_real_ip_from 107.189.5.19;
@@ -90,6 +93,7 @@ set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.7.47;
 set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
+set_real_ip_from 107.189.8.141;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.238;
@@ -237,6 +241,7 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.215.224.65;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
+set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -525,7 +530,6 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
-set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -1205,6 +1209,10 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8c7:789f:51fe:6499:124f;
+set_real_ip_from 2605:6400:30:f8c7:8d46:8271:af8c:41e8;
+set_real_ip_from 2605:6400:30:f8c7:9dd6:86f8:b5b9:a6e2;
+set_real_ip_from 2605:6400:30:f8c7:f36b:5e7b:59f3:a5eb;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -1759,6 +1767,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
