--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -242,6 +242,10 @@ set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8c7:789f:51fe:6499:124f;
+set_real_ip_from 2605:6400:30:f8c7:8d46:8271:af8c:41e8;
+set_real_ip_from 2605:6400:30:f8c7:9dd6:86f8:b5b9:a6e2;
+set_real_ip_from 2605:6400:30:f8c7:f36b:5e7b:59f3:a5eb;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
