Update lists at 20241008-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -160,6 +160,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.185.133;
@@ -238,6 +239,8 @@ allow 178.20.55.182;
 allow 178.215.224.65;
 allow 178.218.144.18;
 allow 178.218.144.51;
+allow 178.218.144.64;
+allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.35.9.250;
 allow 179.43.128.16;
@@ -574,7 +577,6 @@ allow 188.172.229.15;
 allow 188.214.104.21;
 allow 188.244.106.81;
 allow 188.253.112.49;
-allow 188.253.7.106;
 allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
@@ -644,7 +646,6 @@ allow 193.105.134.155;
 allow 193.142.146.139;
 allow 193.142.147.233;
 allow 193.142.147.69;
-allow 193.168.141.173;
 allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -959,7 +960,6 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.203;
 allow 205.185.127.231;
-allow 206.188.197.24;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1079,7 +1079,6 @@ allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
@@ -1405,7 +1404,6 @@ allow 2a02:418:6017::148;
 allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1703,6 +1701,8 @@ allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
+allow 2a0e:b107:dd0::3:ed78:7632;
+allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
@@ -1726,6 +1726,7 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:3::95a:d528;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
@@ -1767,7 +1768,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1808,7 +1809,6 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
-allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1832,6 +1832,7 @@ allow 45.83.104.137;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
+allow 45.86.229.161;
 allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
@@ -1930,6 +1931,7 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.105.146.42;
+allow 77.220.196.253;
 allow 77.221.152.105;
 allow 77.221.157.237;
 allow 77.221.159.184;
@@ -1967,6 +1969,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
+allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
