--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -120,7 +120,6 @@ deny 2400:d320:2202:5765::1;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
-deny 2406:8dc0:6005::97f2:9c02;
 deny 2407:3640:2207:8882::1;
 deny 2407:cdc0:c004::d44:d46f;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -438,7 +437,6 @@ deny 2a02:418:6017::148;
 deny 2a02:842b:821a:1801::abcd;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
-deny 2a02:c206:2095:2624::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -736,6 +734,8 @@ deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:3ea:bc::1;
+deny 2a0e:b107:dd0::3:ed78:7632;
+deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:93c1:26:1f2::9ce5;
@@ -759,6 +759,7 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:3::95a:d528;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:13e2::2;
