--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -160,6 +160,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
+set_real_ip_from 15.204.224.241;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
@@ -238,6 +239,8 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.215.224.65;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
+set_real_ip_from 178.218.144.64;
+set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.35.9.250;
 set_real_ip_from 179.43.128.16;
@@ -574,7 +577,6 @@ set_real_ip_from 188.172.229.15;
 set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.244.106.81;
 set_real_ip_from 188.253.112.49;
-set_real_ip_from 188.253.7.106;
 set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
@@ -644,7 +646,6 @@ set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.142.146.139;
 set_real_ip_from 193.142.147.233;
 set_real_ip_from 193.142.147.69;
-set_real_ip_from 193.168.141.173;
 set_real_ip_from 193.182.96.246;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
@@ -959,7 +960,6 @@ set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.203;
 set_real_ip_from 205.185.127.231;
-set_real_ip_from 206.188.197.24;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -1079,7 +1079,6 @@ set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
 set_real_ip_from 24.240.72.170;
@@ -1405,7 +1404,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c206:2095:2624::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1703,6 +1701,8 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
 set_real_ip_from 2a0e:97c0:3ea:372::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
+set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
+set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
@@ -1726,6 +1726,7 @@ set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:3::95a:d528;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1767,7 +1768,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1808,7 +1809,6 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
-set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1832,6 +1832,7 @@ set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
+set_real_ip_from 45.86.229.161;
 set_real_ip_from 45.9.148.113;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
@@ -1930,6 +1931,7 @@ set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
+set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
@@ -1967,6 +1969,7 @@ set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
+set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
