Update lists at 20241008-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -434,6 +434,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
