--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -120,6 +120,7 @@ set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -180,74 +181,6 @@ set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
-set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
-set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
-set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
-set_real_ip_from 2605:6400:30:ea58:51a1:e174:d185:d6f1;
-set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
-set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
-set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
-set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
-set_real_ip_from 2605:6400:30:edc3::34;
-set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
-set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
-set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f10c:326a:ca74:1896:b82a;
-set_real_ip_from 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
-set_real_ip_from 2605:6400:30:f10c:6327:774b:289a:2916;
-set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
-set_real_ip_from 2605:6400:30:f174::;
-set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
-set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
-set_real_ip_from 2605:6400:30:f174:42:42:42:42;
-set_real_ip_from 2605:6400:30:f174:4:3:2:1;
-set_real_ip_from 2605:6400:30:f174:cafe::;
-set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
-set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
-set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
-set_real_ip_from 2605:6400:30:f307:5d12:16d8:1641:2b15;
-set_real_ip_from 2605:6400:30:f307:ba73:e934:5195:accd;
-set_real_ip_from 2605:6400:30:f307:c2bf:d371:75a9:31e6;
-set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
-set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
-set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
-set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
-set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
-set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
-set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
-set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
-set_real_ip_from 2605:6400:30:f44f:1::;
-set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
-set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
-set_real_ip_from 2605:6400:30:f503::1;
-set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
-set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
-set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
-set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
-set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
-set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
-set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
-set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
-set_real_ip_from 2605:6400:30:f78b::2;
-set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
-set_real_ip_from 2605:6400:30:f7ca::2;
-set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
-set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
-set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
-set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
-set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-set_real_ip_from 2605:6400:30:f8c7:789f:51fe:6499:124f;
-set_real_ip_from 2605:6400:30:f8c7:8d46:8271:af8c:41e8;
-set_real_ip_from 2605:6400:30:f8c7:9dd6:86f8:b5b9:a6e2;
-set_real_ip_from 2605:6400:30:f8c7:f36b:5e7b:59f3:a5eb;
-set_real_ip_from 2605:6400:30:f8d5::1;
-set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
-set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
@@ -427,7 +360,6 @@ set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
-set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
