--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -240,6 +240,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.9.250;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -298,6 +299,7 @@ allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
@@ -527,6 +529,7 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -744,6 +747,7 @@ allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:4ba0:fff8:120::1;
@@ -1750,6 +1754,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.239.42.49;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.239.59;
@@ -1763,6 +1768,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 3.93.43.161;
 allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1852,6 +1858,7 @@ allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
+allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.243.99.161;
 allow 47.76.187.86;
@@ -1874,9 +1881,9 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.207.226.253;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1906,6 +1913,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.236.11.56;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
