--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,7 @@ allow 146.59.35.38;
 allow 146.70.164.210;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -219,6 +220,7 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
+allow 177.149.143.16;
 allow 178.162.209.56;
 allow 178.17.170.144;
 allow 178.17.170.215;
@@ -238,7 +240,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.9.250;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1420,6 +1421,7 @@ allow 2a03:4000:21:115:8837:15ff:fe14:64cc;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
@@ -1769,7 +1771,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1785,10 +1786,6 @@ allow 45.138.16.240;
 allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
-allow 45.139.122.176;
-allow 45.139.122.177;
-allow 45.139.122.178;
-allow 45.139.122.179;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1877,6 +1874,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -2042,6 +2040,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.112.22;
+allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
