--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -302,7 +302,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -526,6 +525,7 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
+allow 185.241.208.236;
 allow 185.241.208.243;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -638,9 +638,6 @@ allow 192.99.149.111;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.142.146.139;
-allow 193.142.147.233;
-allow 193.142.147.69;
 allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -1477,6 +1474,7 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
+allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1710,7 +1708,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1755,6 +1752,7 @@ allow 31.220.75.237;
 allow 31.42.185.134;
 allow 35.0.127.52;
 allow 37.114.41.119;
+allow 3.71.175.220;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
@@ -1773,6 +1771,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
