--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -513,6 +513,7 @@ set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
+set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -746,7 +747,6 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:9400:7e11:89c::1;
-set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
