Update lists at 20241012-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -302,7 +302,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -517,7 +516,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.161.177;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -638,7 +636,6 @@ allow 192.99.149.111;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.142.146.139;
 allow 193.142.147.69;
 allow 193.182.96.246;
 allow 193.189.100.194;
@@ -675,6 +672,7 @@ allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
 allow 194.26.192.161;
+allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.62.248.21;
 allow 195.160.220.104;
@@ -948,7 +946,6 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
-allow 205.185.113.85;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -969,7 +966,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.59.7;
 allow 209.141.60.219;
-allow 209.141.61.16;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.38.189.186;
@@ -1400,6 +1396,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1682,8 +1679,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
-allow 2a0c:2500:571:3b8:e28b:b891:d56b:963a;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1727,8 +1722,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
-allow 2a10:1fc0:3::4d3b:60af;
-allow 2a10:1fc0:3::95a:d528;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
@@ -1771,6 +1764,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1832,7 +1826,6 @@ allow 45.83.104.137;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
-allow 45.86.229.161;
 allow 45.9.148.113;
 allow 45.94.31.68;
 allow 45.95.169.130;
@@ -1873,7 +1866,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1948,6 +1940,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1962,16 +1955,15 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
-allow 83.97.79.121;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
-allow 84.252.121.147;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
