Update lists at 20241013-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -721,6 +721,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
