--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -169,7 +169,6 @@ allow 154.26.159.157;
 allow 154.40.44.183;
 allow 155.138.161.171;
 allow 157.254.252.117;
-allow 159.223.181.227;
 allow 160.119.249.240;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -301,7 +300,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1679,6 +1677,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -2011,6 +2010,7 @@ allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 93.113.25.221;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.8.245.134;
