Update lists at 20241013-0300

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -150,6 +150,7 @@ deny 146.59.35.38;
 deny 146.70.164.210;
 deny 147.45.116.145;
 deny 147.45.78.34;
+deny 147.78.67.73;
 deny 148.113.152.91;
 deny 149.202.79.101;
 deny 149.202.79.129;
@@ -1678,6 +1679,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:34cd::1;
+deny 2a0d:8140:1fff:615c::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
@@ -1761,7 +1763,8 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.247;
+deny 45.129.84.248;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1863,6 +1866,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -2011,6 +2015,7 @@ deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
 deny 93.113.25.221;
+deny 93.113.25.223;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.8.245.134;
