--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,7 @@ allow 146.59.35.38;
 allow 146.70.164.210;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -1678,6 +1679,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
+allow 2a0d:8140:1fff:615c::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -1761,7 +1763,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1863,6 +1866,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -2011,6 +2015,7 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.113.25.221;
+allow 93.113.25.223;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.8.245.134;
