--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -722,6 +722,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
+allow 2a0d:8140:1fff:615c::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
