--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -297,6 +297,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -636,6 +637,7 @@ allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
 allow 193.189.100.197;
+allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
 allow 193.189.100.201;
@@ -1446,7 +1448,6 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1695,6 +1696,7 @@ allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
@@ -1751,7 +1753,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.248;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1809,6 +1810,7 @@ allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
 allow 45.9.148.113;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1849,7 +1851,6 @@ allow 5.196.95.34;
 allow 5.230.68.204;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1935,12 +1936,10 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
 allow 8.218.9.41;
-allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
