--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -497,7 +497,6 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -746,6 +745,7 @@ deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
 deny 2a0f:df00:0:255::197;
+deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
