--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -131,7 +131,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.146.142;
@@ -145,7 +144,7 @@ set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.24.197.112;
-set_real_ip_from 146.59.35.246;
+set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
@@ -246,6 +245,7 @@ set_real_ip_from 179.43.159.198;
 set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
+set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
@@ -517,7 +517,6 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
-set_real_ip_from 185.241.208.236;
 set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -725,6 +724,7 @@ set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
+set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:800:1f70::;
@@ -1448,6 +1448,7 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
+set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1752,10 +1753,11 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1810,7 +1812,6 @@ set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.9.148.113;
-set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1936,10 +1937,10 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 8.218.9.41;
-set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
+set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
