--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -167,7 +167,9 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 155.138.161.171;
+allow 157.254.252.117;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -1418,6 +1420,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f02::1125;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1438,7 +1441,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1738,6 +1740,7 @@ allow 3.71.175.220;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
+allow 37.220.84.85;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1753,6 +1756,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1846,6 +1850,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 5.230.68.204;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
@@ -1870,7 +1875,6 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
