--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -437,6 +437,7 @@ allow 2a02:418:6017::148;
 allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c204:2220:8710::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
