--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -124,7 +124,6 @@ set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2406:8dc0:6005::97f2:9c02;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:cdc0:c004::d44:d46f;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -779,4 +778,5 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
+set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
