Update lists at 20241016-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -134,7 +134,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -747,6 +746,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
