Update lists at 20241017-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -161,6 +161,7 @@ allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.184.105;
+allow 154.213.184.17;
 allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
@@ -301,7 +302,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -1724,6 +1724,7 @@ allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
+allow 2a12:dd47:8513::4;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1747,7 +1748,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
