--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -772,4 +772,5 @@ allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
+allow 2a12:dd47:8513::4;
 allow 2a13:d207:0:461::1;
