--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,7 @@ allow 146.59.35.38;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -207,6 +208,7 @@ allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.104.243.155;
 allow 172.105.161.162;
+allow 172.234.120.87;
 allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -221,7 +223,6 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -303,7 +304,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -1086,6 +1086,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
+allow 2600:3c09::f03c:95ff:fe5b:2d55;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -1382,7 +1383,6 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -2007,7 +2007,6 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
