Update lists at 20241018-0600

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -773,4 +773,5 @@ allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
+allow 2a12:dd47:8513::5;
 allow 2a13:d207:0:461::1;
