--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -161,6 +161,7 @@ set_real_ip_from 15.204.224.241;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.184.105;
+set_real_ip_from 154.213.184.111;
 set_real_ip_from 154.213.184.17;
 set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
@@ -174,7 +175,6 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 157.254.252.117;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -1730,6 +1730,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
+set_real_ip_from 2a12:dd47:8513::5;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1753,8 +1754,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.248;
-set_real_ip_from 45.129.84.249;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1960,6 +1960,7 @@ set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.208.240.78;
 set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
@@ -2010,6 +2011,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.54;
