--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -773,4 +773,5 @@ deny 2a12:d8c0:109a:9001::7;
 deny 2a12:dd47:8513::2;
 deny 2a12:dd47:8513::3;
 deny 2a12:dd47:8513::4;
+deny 2a12:dd47:8513::5;
 deny 2a13:d207:0:461::1;
